--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,9 +9,13 @@
   src: url('../fonts/ProximaNovaCond-Regular.otf');
 }
 
+.front-navbar {
+  background-color: #8DFAF1;
+}
 
 .html-css {
 	background-color: #FFFFFF;
+  height: 100%;
 }
 
 nav {
@@ -41,7 +45,6 @@ nav {
 	margin: 0;
 	padding: 0;
 	height: 90vh;
-  // background-color: #8DFAF1;
 	@media screen and (max-width: 990px) {
 		height: auto;
 	}
